[gd_scene load_steps=2 format=3 uid="uid://hg5vut0tquyc"]

[ext_resource type="Script" path="res://Scenes/Monkey/MonkeyGui/MonkeyPanicBarIndicator.gd" id="1_76rca"]

[node name="MonkeyPanicBarIndicator" type="Node2D"]
script = ExtResource("1_76rca")

[node name="MainLine" type="Line2D" parent="."]
z_index = 2
points = PackedVector2Array(-25, 0)
width = 4.0
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="BackgroundLine" type="Line2D" parent="."]
z_index = 1
points = PackedVector2Array(-25, 0, 25, 0)
width = 8.0
default_color = Color(0.152941, 0.152941, 0.152941, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BarShakeTimer" type="Timer" parent="."]

[connection signal="timeout" from="BarShakeTimer" to="." method="_on_bar_shake_timer_timeout"]
